fixing z-index of menu

--- a/public/stylesheets/structure.less
+++ b/public/stylesheets/structure.less
@@ -101,6 +101,7 @@ body {
 						top: 30px;
 						width: 150px;
 						height: auto;
+						z-index: 999;
 						
 						li {
 							background: #000000;
